2008-01-14  Johannes Schmid <jhs@gnome.org>

	* glom/utility_widgets/dragbutton.cc:
	Setup drag source correctly.
	
	* glom/utility_widgets/flowtable.cc:
	* glom/utility_widgets/flowtable.h:	
	Fixed placeholder expanding
	Support dragging on child widgets (at least GtkEntry's for now)

2008-01-13  Armin Burgmeier  <armin@openismus.com>

	* configure.in: Disable the --with-postgres-utils options on Windows
	because it does not make sense to hardcode paths on Windows. We use
	Glib::find_program_in_path to locate the postgres executables.

	* glom/libglom/connectionpool.h:
	* glom/libglom/connectionpool.cc: Severial windows fixes: Don't use
	libepc, locate postgres programs using Glib::find_program_in_path,
	quote path to executables, use closesocket() instead of close().

	* glom/libglom/spawn_with_feedback.cc: Fixed typo.

	* glom/Makefile.am: Changed library linking order so linking developer
	mode on Windows succeeds.

2008-01-10  Murray Cumming  <murrayc@murrayc.com>

	* configure.in: Depend on the latest version of libgda, because we 
	use the new Gda::Value::get_ulong() method. Thanks to Rohit Agrawal.

2008-01-04  Johannes Schmid <jhs@gnome.org>

	* glom/utility_widgets/flowtable.cc:
	Cleaned-up setup_dnd() code and fix a very stupid
	bug in column calculation

2008-01-02  Armin Burgmeier  <armin@openismus.com>

	* glom/utility_widgets/cellrendererlist/cellrendererlist.h:
	* glom/utility_widgets/cellrendererlist/cellrendererlist.cc:
	* glom/utility_widgets/cellrendererlist/Makefile.am
	* configure.in: Moved cellrendererlist to this subdirectory.

	* glom/mode_data/flowtablewithfields.h:
	* glom/mode_data/flowtablewithfields.cc: Moved the FlowTableWithFields
	class from utility_widgets to mode_data. mode_data is the only one who
	uses this, and this way, utility_widgets do no longer depend on
	mode_data. This is necessary to link libglom dynamically on Windows.

	* glom/Makefile.am: Added
	utility_widgets/cellrendererlist/libutility_widgets_cellrendererlist.a