@@ -1171,15 +1171,10 @@ void FlowTableWithFields::on_dnd_add_layout_group(LayoutWidgetBase* above)
 void FlowTableWithFields::on_dnd_add_layout_item_button(LayoutWidgetBase* above)
 {
   // create the button
-  sharedptr<LayoutItem_Button> layout_item_button(new LayoutItem_Button());
+  sharedptr<LayoutItem_Button> layout_item_button = sharedptr<LayoutItem_Button>::create();
+  layout_item_button->set_title(_("New Button")); //Give the button a default title, so it is big enough, and so people see that they should change it.
+  layout_item_button->set_name ("new_button");
   sharedptr<LayoutItem> layout_item = sharedptr<LayoutItem>::cast_dynamic(layout_item_button);
-  
-  // Get field informations
-  if (!get_field_information (layout_item))
-  {
-    realize();
-    return;
-  }
     
   //Add a widget for this layout item, after the "above" item:
   type_list_layoutwidgets::iterator cur_widget;
@@ -1211,12 +1206,9 @@ void FlowTableWithFields::on_dnd_add_layout_item_button(LayoutWidgetBase* above)
 void FlowTableWithFields::on_dnd_add_layout_item_text(LayoutWidgetBase* above)
 {
   // create the text label
-  sharedptr<LayoutItem_Text> layout_item_text(new LayoutItem_Text());
-  sharedptr<LayoutItem> layout_item = sharedptr<LayoutItem>::cast_dynamic(layout_item_text);
-  
-  // Get field informations
-  if (!get_field_information (layout_item))
-    return;
+  sharedptr<LayoutItem_Text> textobject = sharedptr<LayoutItem_Text>::create();
+  textobject->set_title(_("Text Title")); //Give the button a default title, so it is big enough, and so people see that they should change it.
+  sharedptr<LayoutItem> layout_item = sharedptr<LayoutItem>::cast_dynamic(textobject);
     
   //Add a widget for this layout item, after the "above" item:
   type_list_layoutwidgets::iterator cur_widget;
@@ -1225,7 +1217,7 @@ void FlowTableWithFields::on_dnd_add_layout_item_text(LayoutWidgetBase* above)
   else
     cur_widget = m_list_layoutwidgets.end();
 
-  add_layout_item_at_position(layout_item_text, cur_widget);
+  add_layout_item_at_position(textobject, cur_widget);
 
 
   //Get the layout group that the "above" widget's layout item is in:
@@ -1237,9 +1229,9 @@ void FlowTableWithFields::on_dnd_add_layout_item_text(LayoutWidgetBase* above)
   }
 
   if(above)
-    layout_group->add_item(layout_item_text, above->get_layout_item());
+    layout_group->add_item(textobject, above->get_layout_item());
   else
-    layout_group->add_item(layout_item_text);
+    layout_group->add_item(textobject);
 
   //Tell the parent to tell the document to save the layout:
   signal_layout_changed().emit();
@@ -1313,43 +1305,5 @@ sharedptr<LayoutItem_Portal> FlowTableWithFields::get_layout_item_from_relation(
   }
   return layout_item;
 }
-
-#ifndef GLOM_ENABLE_CLIENT_ONLY
-bool FlowTableWithFields::get_field_information (sharedptr<LayoutItem>& item)
-{
-  bool retval = false; 
- 
-  try
-  {
-    Glib::RefPtr<Gnome::Glade::Xml> refXml = Gnome::Glade::Xml::create(GLOM_GLADEDIR "glom.glade", "dialog_drop_field");
-
-    Gtk::Dialog* dialog = 0;
-    Gtk::Entry* entry_name = 0;
-    Gtk::Entry* entry_title = 0;
-    
-    refXml->get_widget("dialog_drop_field", dialog);
-    refXml->get_widget("entry_name", entry_name);
-    refXml->get_widget("entry_title", entry_title);
-
-    if(dialog)
-    {
-      const int response = dialog->run();
-      dialog->hide();
-      if(response == Gtk::RESPONSE_OK)
-      {
-        item->set_name (entry_name->get_text());
-        item->set_title (entry_title->get_text());
-        retval = true;
-      }
-      delete dialog;
-    }
-  }
-  catch(const Gnome::Glade::XmlError& ex)
-  {
-    std::cerr << ex.what() << std::endl;
-  }
-  return retval;
-}
-#endif
 
 } //namespace Glom
